--- a/Local_RAG.ipynb
+++ b/Local_RAG.ipynb
@@ -263,7 +263,7 @@
     "    sequence, in this case - all_mpnet-base-v2 model). \n",
     "    LLMs, especially smaller ones, also have a request token limit.\n",
     "    This simply concludes that *most* pages fit our embedding window\n",
-    "    and also inference context window. \"\"\"\n",
+    "    and also inference context window. This won't be a problem using GEMMA. \"\"\"\n",
     "\n",
     "df = pd.DataFrame(pages_and_texts)\n",
     "df.describe().round(2)"
